fixed the navbar from being clipped
removing the need to use padding right and changed top margin for form

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@ body {
 #header {
   position: fixed;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  box-sizing: border-box;
   width: 100%;
   height: 100px;
   top: 0;
@@ -58,7 +59,7 @@ body {
   gap: clamp(10px, 5vw, 100px);
   width: 100%;
   box-sizing: border-box;
- padding-right: clamp(10px, 4vw, 40px);
+/* padding-right: clamp(10px, 4vw, 40px); */
   min-width: 0;
   font-size: 2rem;
 }
@@ -76,7 +77,8 @@ a:active {
 }
 #form {
   box-sizing: border-box;
-  margin-top: 140px;
+  margin-top: 99px;
+  border-top: 1px solid #f3f3f3;
   display: flex;
   padding: 20px;
   font-size: 1.5rem;
@@ -199,7 +201,6 @@ a:active {
 @media only screen and (max-width: 436px) {
   #form {
     background-color: #000;
-    margin-top: 120px;
     background-image: none !important;
     justify-content: center;
     align-items: center;
